Sapphire.App/wwwroot/styles.css
/* MudButton Overrides */
.mud-button-outlined {
    border-color: var(--mud-palette-lines-default) !important;
}

.mud-button-group-outlined.mud-button-group-override-styles .mud-button-root {
    border-color: var(--mud-palette-lines-default);
}

/* MudDatePicker Overrides */
@layer{
    .mud-picker-datepicker-toolbar {
        background-color: var(--mud-palette-background) !important;
    }

    .mud-picker-container {
        border: 1px solid var(--mud-palette-lines-default) !important;
    }
}

.mud-input {
    font-weight: inherit !important;
    line-height: inherit !important;
    font-size: inherit !important;
    color: inherit !important;
}

/* MudChip Overrides */
.mud-chip.mud-chip-size-small{
    height: 18px !important;
    padding: 0 5px;
}

.mud-chip-outlined {
    border-color: var(--mud-palette-lines-default) !important;
}


/* MudIcon Overrides */
.mud-icon-size-small{
    width: 0.84em !important;
    height: 0.84em !important;
}

.mud-icon-button.mud-button{
    padding: 6px !important;
}

/* MudInput Small */
.mud-input-narrow {
    margin-top: 0 !important;
}

.mud-input-narrow > div > div > input {
    padding: 6px 10px 7px !important;
}

